--- a/Election.ipynb
+++ b/Election.ipynb
@@ -2,238 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>year</th>\n",
-       "      <th>state</th>\n",
-       "      <th>state_po</th>\n",
-       "      <th>county</th>\n",
-       "      <th>FIPS</th>\n",
-       "      <th>office</th>\n",
-       "      <th>candidate</th>\n",
-       "      <th>party</th>\n",
-       "      <th>candidatevotes</th>\n",
-       "      <th>totalvotes</th>\n",
-       "      <th>version</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2000</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>AL</td>\n",
-       "      <td>Autauga</td>\n",
-       "      <td>1001.0</td>\n",
-       "      <td>President</td>\n",
-       "      <td>Al Gore</td>\n",
-       "      <td>democrat</td>\n",
-       "      <td>4942.0</td>\n",
-       "      <td>17208</td>\n",
-       "      <td>20191203</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2000</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>AL</td>\n",
-       "      <td>Autauga</td>\n",
-       "      <td>1001.0</td>\n",
-       "      <td>President</td>\n",
-       "      <td>George W. Bush</td>\n",
-       "      <td>republican</td>\n",
-       "      <td>11993.0</td>\n",
-       "      <td>17208</td>\n",
-       "      <td>20191203</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2000</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>AL</td>\n",
-       "      <td>Autauga</td>\n",
-       "      <td>1001.0</td>\n",
-       "      <td>President</td>\n",
-       "      <td>Ralph Nader</td>\n",
-       "      <td>green</td>\n",
-       "      <td>160.0</td>\n",
-       "      <td>17208</td>\n",
-       "      <td>20191203</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2000</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>AL</td>\n",
-       "      <td>Autauga</td>\n",
-       "      <td>1001.0</td>\n",
-       "      <td>President</td>\n",
-       "      <td>Other</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>113.0</td>\n",
-       "      <td>17208</td>\n",
-       "      <td>20191203</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2000</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>AL</td>\n",
-       "      <td>Baldwin</td>\n",
-       "      <td>1003.0</td>\n",
-       "      <td>President</td>\n",
-       "      <td>Al Gore</td>\n",
-       "      <td>democrat</td>\n",
-       "      <td>13997.0</td>\n",
-       "      <td>56480</td>\n",
-       "      <td>20191203</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50519</th>\n",
-       "      <td>2016</td>\n",
-       "      <td>Alaska</td>\n",
-       "      <td>AK</td>\n",
-       "      <td>District 40</td>\n",
-       "      <td>2040.0</td>\n",
-       "      <td>President</td>\n",
-       "      <td>Donald Trump</td>\n",
-       "      <td>republican</td>\n",
-       "      <td>1377.0</td>\n",
-       "      <td>4610</td>\n",
-       "      <td>20191203</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50520</th>\n",
-       "      <td>2016</td>\n",
-       "      <td>Alaska</td>\n",
-       "      <td>AK</td>\n",
-       "      <td>District 40</td>\n",
-       "      <td>2040.0</td>\n",
-       "      <td>President</td>\n",
-       "      <td>Other</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>895.0</td>\n",
-       "      <td>4610</td>\n",
-       "      <td>20191203</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50521</th>\n",
-       "      <td>2016</td>\n",
-       "      <td>Alaska</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>District 99</td>\n",
-       "      <td>2099.0</td>\n",
-       "      <td>President</td>\n",
-       "      <td>Hillary Clinton</td>\n",
-       "      <td>democrat</td>\n",
-       "      <td>274.0</td>\n",
-       "      <td>5056</td>\n",
-       "      <td>20191203</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50522</th>\n",
-       "      <td>2016</td>\n",
-       "      <td>Alaska</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>District 99</td>\n",
-       "      <td>2099.0</td>\n",
-       "      <td>President</td>\n",
-       "      <td>Donald Trump</td>\n",
-       "      <td>republican</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>5056</td>\n",
-       "      <td>20191203</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50523</th>\n",
-       "      <td>2016</td>\n",
-       "      <td>Alaska</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>District 99</td>\n",
-       "      <td>2099.0</td>\n",
-       "      <td>President</td>\n",
-       "      <td>Other</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>5056</td>\n",
-       "      <td>20191203</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>50524 rows × 11 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       year    state state_po       county    FIPS     office  \\\n",
-       "0      2000  Alabama       AL      Autauga  1001.0  President   \n",
-       "1      2000  Alabama       AL      Autauga  1001.0  President   \n",
-       "2      2000  Alabama       AL      Autauga  1001.0  President   \n",
-       "3      2000  Alabama       AL      Autauga  1001.0  President   \n",
-       "4      2000  Alabama       AL      Baldwin  1003.0  President   \n",
-       "...     ...      ...      ...          ...     ...        ...   \n",
-       "50519  2016   Alaska       AK  District 40  2040.0  President   \n",
-       "50520  2016   Alaska       AK  District 40  2040.0  President   \n",
-       "50521  2016   Alaska      NaN  District 99  2099.0  President   \n",
-       "50522  2016   Alaska      NaN  District 99  2099.0  President   \n",
-       "50523  2016   Alaska      NaN  District 99  2099.0  President   \n",
-       "\n",
-       "             candidate       party  candidatevotes  totalvotes   version  \n",
-       "0              Al Gore    democrat          4942.0       17208  20191203  \n",
-       "1       George W. Bush  republican         11993.0       17208  20191203  \n",
-       "2          Ralph Nader       green           160.0       17208  20191203  \n",
-       "3                Other         NaN           113.0       17208  20191203  \n",
-       "4              Al Gore    democrat         13997.0       56480  20191203  \n",
-       "...                ...         ...             ...         ...       ...  \n",
-       "50519     Donald Trump  republican          1377.0        4610  20191203  \n",
-       "50520            Other         NaN           895.0        4610  20191203  \n",
-       "50521  Hillary Clinton    democrat           274.0        5056  20191203  \n",
-       "50522     Donald Trump  republican            40.0        5056  20191203  \n",
-       "50523            Other         NaN            28.0        5056  20191203  \n",
-       "\n",
-       "[50524 rows x 11 columns]"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Dependencies and Setup\n",
     "import pandas as pd\n",
@@ -245,18 +16,86 @@
     "election_data = \"data/countypres_2000-2016.csv\"\n",
     "\n",
     "# Read Purchasing File and store into Pandas data frame\n",
-    "election_data = pd.read_csv(election_data)\n",
-    "election_data"
+    "election_data_df = pd.read_csv(election_data, low_memory=False)\n",
+    "election_data_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sqlalchemy import create_engine\n",
+    "# Rename Column Headers & Clean up \n",
+    "new_election_data_df = election_data_df.rename(columns={\"year\":\"year\",\n",
+    "                                                           \"state\": \"state\" ,\n",
+    "                                                            \"state_po\": \"state_po\",\n",
+    "                                                            \"county\":\"county\",\n",
+    "                                                            \"FIPS\": \"fips\",\n",
+    "                                                            \"office\": \"office\",\n",
+    "                                                            \"candidate\": \"candidate\",\n",
+    "                                                            \"party\": \"party\",\n",
+    "                                                            \"candidatevotes\": \"candidate_votes\",\n",
+    "                                                            \"totalvotes\": \"total_votes_county\",\n",
+    "                                                            \"version\": \"version\"})\n",
     "\n",
+    "new_election_data_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_election_data_df[\"party\"].fillna(\"other\", inplace = True)\n",
+    "new_election_data_df[\"candidate_votes\"].fillna(\"0\", inplace = True)\n",
+    "new_election_data_df[\"state_po\"].fillna(\"unknown\", inplace = True)\n",
+    "new_election_data_df[\"fips\"].fillna(\"0\", inplace = True)\n",
+    "new_election_data_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# election_cols = [\"Year\", \"State\", \"State_Abbr\", \"County\",\"Office\",\"Candidate\",\"Party\",\"Candidate Votes\",\"Total Votes\" ]\n",
+    "# final_election_data_df = new_election_data_df[election_cols].copy()\n",
+    "# final_election_data_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# LOAD"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Steps\n",
+    "- Create database connection\n",
+    "- Load DataFrames into database\n",
+    "- Create Database Connection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create Database Connection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "engine = create_engine(f'postgresql://{user}:{password}@{host}:{port}/{database}')\n",
     "conn = engine.connect()"
    ]
@@ -266,7 +105,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "engine.table_names()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_election_data_df.to_sql(name='election_data', con = engine, if_exists='append', index=True)"
+   ]
   },
   {
    "cell_type": "code",
