Pushed initial html and flask

--- a/Election.ipynb
+++ b/Election.ipynb
@@ -2,9 +2,139 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>state</th>\n",
+       "      <th>state_po</th>\n",
+       "      <th>county</th>\n",
+       "      <th>FIPS</th>\n",
+       "      <th>office</th>\n",
+       "      <th>candidate</th>\n",
+       "      <th>party</th>\n",
+       "      <th>candidatevotes</th>\n",
+       "      <th>totalvotes</th>\n",
+       "      <th>version</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Autauga</td>\n",
+       "      <td>1001.0</td>\n",
+       "      <td>President</td>\n",
+       "      <td>Al Gore</td>\n",
+       "      <td>democrat</td>\n",
+       "      <td>4942.0</td>\n",
+       "      <td>17208</td>\n",
+       "      <td>20191203</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Autauga</td>\n",
+       "      <td>1001.0</td>\n",
+       "      <td>President</td>\n",
+       "      <td>George W. Bush</td>\n",
+       "      <td>republican</td>\n",
+       "      <td>11993.0</td>\n",
+       "      <td>17208</td>\n",
+       "      <td>20191203</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Autauga</td>\n",
+       "      <td>1001.0</td>\n",
+       "      <td>President</td>\n",
+       "      <td>Ralph Nader</td>\n",
+       "      <td>green</td>\n",
+       "      <td>160.0</td>\n",
+       "      <td>17208</td>\n",
+       "      <td>20191203</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Autauga</td>\n",
+       "      <td>1001.0</td>\n",
+       "      <td>President</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>113.0</td>\n",
+       "      <td>17208</td>\n",
+       "      <td>20191203</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Baldwin</td>\n",
+       "      <td>1003.0</td>\n",
+       "      <td>President</td>\n",
+       "      <td>Al Gore</td>\n",
+       "      <td>democrat</td>\n",
+       "      <td>13997.0</td>\n",
+       "      <td>56480</td>\n",
+       "      <td>20191203</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   year    state state_po   county    FIPS     office       candidate  \\\n",
+       "0  2000  Alabama       AL  Autauga  1001.0  President         Al Gore   \n",
+       "1  2000  Alabama       AL  Autauga  1001.0  President  George W. Bush   \n",
+       "2  2000  Alabama       AL  Autauga  1001.0  President     Ralph Nader   \n",
+       "3  2000  Alabama       AL  Autauga  1001.0  President           Other   \n",
+       "4  2000  Alabama       AL  Baldwin  1003.0  President         Al Gore   \n",
+       "\n",
+       "        party  candidatevotes  totalvotes   version  \n",
+       "0    democrat          4942.0       17208  20191203  \n",
+       "1  republican         11993.0       17208  20191203  \n",
+       "2       green           160.0       17208  20191203  \n",
+       "3         NaN           113.0       17208  20191203  \n",
+       "4    democrat         13997.0       56480  20191203  "
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Dependencies and Setup\n",
     "import pandas as pd\n",
@@ -22,9 +152,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>State</th>\n",
+       "      <th>State_Abbr</th>\n",
+       "      <th>County</th>\n",
+       "      <th>FIPS</th>\n",
+       "      <th>Office</th>\n",
+       "      <th>Candidate</th>\n",
+       "      <th>Party</th>\n",
+       "      <th>Candidate_Votes</th>\n",
+       "      <th>Total_Votes_byCounty</th>\n",
+       "      <th>Version</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Autauga</td>\n",
+       "      <td>1001.0</td>\n",
+       "      <td>President</td>\n",
+       "      <td>Al Gore</td>\n",
+       "      <td>democrat</td>\n",
+       "      <td>4942.0</td>\n",
+       "      <td>17208</td>\n",
+       "      <td>20191203</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Autauga</td>\n",
+       "      <td>1001.0</td>\n",
+       "      <td>President</td>\n",
+       "      <td>George W. Bush</td>\n",
+       "      <td>republican</td>\n",
+       "      <td>11993.0</td>\n",
+       "      <td>17208</td>\n",
+       "      <td>20191203</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Autauga</td>\n",
+       "      <td>1001.0</td>\n",
+       "      <td>President</td>\n",
+       "      <td>Ralph Nader</td>\n",
+       "      <td>green</td>\n",
+       "      <td>160.0</td>\n",
+       "      <td>17208</td>\n",
+       "      <td>20191203</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Autauga</td>\n",
+       "      <td>1001.0</td>\n",
+       "      <td>President</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>113.0</td>\n",
+       "      <td>17208</td>\n",
+       "      <td>20191203</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Baldwin</td>\n",
+       "      <td>1003.0</td>\n",
+       "      <td>President</td>\n",
+       "      <td>Al Gore</td>\n",
+       "      <td>democrat</td>\n",
+       "      <td>13997.0</td>\n",
+       "      <td>56480</td>\n",
+       "      <td>20191203</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Year    State State_Abbr   County    FIPS     Office       Candidate  \\\n",
+       "0  2000  Alabama         AL  Autauga  1001.0  President         Al Gore   \n",
+       "1  2000  Alabama         AL  Autauga  1001.0  President  George W. Bush   \n",
+       "2  2000  Alabama         AL  Autauga  1001.0  President     Ralph Nader   \n",
+       "3  2000  Alabama         AL  Autauga  1001.0  President           Other   \n",
+       "4  2000  Alabama         AL  Baldwin  1003.0  President         Al Gore   \n",
+       "\n",
+       "        Party  Candidate_Votes  Total_Votes_byCounty   Version  \n",
+       "0    democrat           4942.0                 17208  20191203  \n",
+       "1  republican          11993.0                 17208  20191203  \n",
+       "2       green            160.0                 17208  20191203  \n",
+       "3         NaN            113.0                 17208  20191203  \n",
+       "4    democrat          13997.0                 56480  20191203  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Rename Column Headers & Clean up \n",
     "election_data_df = election_data_df.rename(columns={\"year\":\"Year\",\n",
@@ -45,9 +305,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>State</th>\n",
+       "      <th>State_Abbr</th>\n",
+       "      <th>County</th>\n",
+       "      <th>Office</th>\n",
+       "      <th>Candidate</th>\n",
+       "      <th>Party</th>\n",
+       "      <th>Candidate_Votes</th>\n",
+       "      <th>Total_Votes_byCounty</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Autauga</td>\n",
+       "      <td>President</td>\n",
+       "      <td>Al Gore</td>\n",
+       "      <td>democrat</td>\n",
+       "      <td>4942.0</td>\n",
+       "      <td>17208</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Autauga</td>\n",
+       "      <td>President</td>\n",
+       "      <td>George W. Bush</td>\n",
+       "      <td>republican</td>\n",
+       "      <td>11993.0</td>\n",
+       "      <td>17208</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Autauga</td>\n",
+       "      <td>President</td>\n",
+       "      <td>Ralph Nader</td>\n",
+       "      <td>green</td>\n",
+       "      <td>160.0</td>\n",
+       "      <td>17208</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Autauga</td>\n",
+       "      <td>President</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>113.0</td>\n",
+       "      <td>17208</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Baldwin</td>\n",
+       "      <td>President</td>\n",
+       "      <td>Al Gore</td>\n",
+       "      <td>democrat</td>\n",
+       "      <td>13997.0</td>\n",
+       "      <td>56480</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Year    State State_Abbr   County     Office       Candidate       Party  \\\n",
+       "0  2000  Alabama         AL  Autauga  President         Al Gore    democrat   \n",
+       "1  2000  Alabama         AL  Autauga  President  George W. Bush  republican   \n",
+       "2  2000  Alabama         AL  Autauga  President     Ralph Nader       green   \n",
+       "3  2000  Alabama         AL  Autauga  President           Other         NaN   \n",
+       "4  2000  Alabama         AL  Baldwin  President         Al Gore    democrat   \n",
+       "\n",
+       "   Candidate_Votes  Total_Votes_byCounty  \n",
+       "0           4942.0                 17208  \n",
+       "1          11993.0                 17208  \n",
+       "2            160.0                 17208  \n",
+       "3            113.0                 17208  \n",
+       "4          13997.0                 56480  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "election_data_df = election_data_df.drop(columns=[\"FIPS\",\"Version\"])\n",
     "election_data_df.head()"
@@ -55,9 +433,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>State</th>\n",
+       "      <th>State_Abbr</th>\n",
+       "      <th>County</th>\n",
+       "      <th>Office</th>\n",
+       "      <th>Candidate</th>\n",
+       "      <th>Party</th>\n",
+       "      <th>Candidate_Votes</th>\n",
+       "      <th>Total_Votes_byCounty</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Autauga</td>\n",
+       "      <td>President</td>\n",
+       "      <td>Al Gore</td>\n",
+       "      <td>democrat</td>\n",
+       "      <td>4942</td>\n",
+       "      <td>17208</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Autauga</td>\n",
+       "      <td>President</td>\n",
+       "      <td>George W. Bush</td>\n",
+       "      <td>republican</td>\n",
+       "      <td>11993</td>\n",
+       "      <td>17208</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Autauga</td>\n",
+       "      <td>President</td>\n",
+       "      <td>Ralph Nader</td>\n",
+       "      <td>green</td>\n",
+       "      <td>160</td>\n",
+       "      <td>17208</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Autauga</td>\n",
+       "      <td>President</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>113</td>\n",
+       "      <td>17208</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Baldwin</td>\n",
+       "      <td>President</td>\n",
+       "      <td>Al Gore</td>\n",
+       "      <td>democrat</td>\n",
+       "      <td>13997</td>\n",
+       "      <td>56480</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Year    State State_Abbr   County     Office       Candidate       Party  \\\n",
+       "0  2000  Alabama         AL  Autauga  President         Al Gore    democrat   \n",
+       "1  2000  Alabama         AL  Autauga  President  George W. Bush  republican   \n",
+       "2  2000  Alabama         AL  Autauga  President     Ralph Nader       green   \n",
+       "3  2000  Alabama         AL  Autauga  President           Other       Other   \n",
+       "4  2000  Alabama         AL  Baldwin  President         Al Gore    democrat   \n",
+       "\n",
+       "  Candidate_Votes  Total_Votes_byCounty  \n",
+       "0            4942                 17208  \n",
+       "1           11993                 17208  \n",
+       "2             160                 17208  \n",
+       "3             113                 17208  \n",
+       "4           13997                 56480  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "election_data_df[\"Party\"].fillna(\"Other\", inplace = True)\n",
     "election_data_df[\"Candidate_Votes\"].fillna(\"0\", inplace = True)\n",
@@ -67,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,16 +608,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "engine.table_names()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
