--- a/Election.ipynb
+++ b/Election.ipynb
@@ -563,13 +563,452 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>state</th>\n",
+       "      <th>state_po</th>\n",
+       "      <th>state_fips</th>\n",
+       "      <th>state_cen</th>\n",
+       "      <th>state_ic</th>\n",
+       "      <th>office</th>\n",
+       "      <th>candidate</th>\n",
+       "      <th>party_detailed</th>\n",
+       "      <th>writein</th>\n",
+       "      <th>candidatevotes</th>\n",
+       "      <th>totalvotes</th>\n",
+       "      <th>version</th>\n",
+       "      <th>notes</th>\n",
+       "      <th>party_simplified</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1976</td>\n",
+       "      <td>ALABAMA</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>1</td>\n",
+       "      <td>63</td>\n",
+       "      <td>41</td>\n",
+       "      <td>US PRESIDENT</td>\n",
+       "      <td>CARTER, JIMMY</td>\n",
+       "      <td>DEMOCRAT</td>\n",
+       "      <td>False</td>\n",
+       "      <td>659170</td>\n",
+       "      <td>1182850</td>\n",
+       "      <td>20210113</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>DEMOCRAT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1976</td>\n",
+       "      <td>ALABAMA</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>1</td>\n",
+       "      <td>63</td>\n",
+       "      <td>41</td>\n",
+       "      <td>US PRESIDENT</td>\n",
+       "      <td>FORD, GERALD</td>\n",
+       "      <td>REPUBLICAN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>504070</td>\n",
+       "      <td>1182850</td>\n",
+       "      <td>20210113</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>REPUBLICAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1976</td>\n",
+       "      <td>ALABAMA</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>1</td>\n",
+       "      <td>63</td>\n",
+       "      <td>41</td>\n",
+       "      <td>US PRESIDENT</td>\n",
+       "      <td>MADDOX, LESTER</td>\n",
+       "      <td>AMERICAN INDEPENDENT PARTY</td>\n",
+       "      <td>False</td>\n",
+       "      <td>9198</td>\n",
+       "      <td>1182850</td>\n",
+       "      <td>20210113</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>OTHER</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1976</td>\n",
+       "      <td>ALABAMA</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>1</td>\n",
+       "      <td>63</td>\n",
+       "      <td>41</td>\n",
+       "      <td>US PRESIDENT</td>\n",
+       "      <td>BUBAR, BENJAMIN \"\"BEN\"\"</td>\n",
+       "      <td>PROHIBITION</td>\n",
+       "      <td>False</td>\n",
+       "      <td>6669</td>\n",
+       "      <td>1182850</td>\n",
+       "      <td>20210113</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>OTHER</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1976</td>\n",
+       "      <td>ALABAMA</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>1</td>\n",
+       "      <td>63</td>\n",
+       "      <td>41</td>\n",
+       "      <td>US PRESIDENT</td>\n",
+       "      <td>HALL, GUS</td>\n",
+       "      <td>COMMUNIST PARTY USE</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1954</td>\n",
+       "      <td>1182850</td>\n",
+       "      <td>20210113</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>OTHER</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   year    state state_po  state_fips  state_cen  state_ic        office  \\\n",
+       "0  1976  ALABAMA       AL           1         63        41  US PRESIDENT   \n",
+       "1  1976  ALABAMA       AL           1         63        41  US PRESIDENT   \n",
+       "2  1976  ALABAMA       AL           1         63        41  US PRESIDENT   \n",
+       "3  1976  ALABAMA       AL           1         63        41  US PRESIDENT   \n",
+       "4  1976  ALABAMA       AL           1         63        41  US PRESIDENT   \n",
+       "\n",
+       "                 candidate              party_detailed writein  \\\n",
+       "0            CARTER, JIMMY                    DEMOCRAT   False   \n",
+       "1             FORD, GERALD                  REPUBLICAN   False   \n",
+       "2           MADDOX, LESTER  AMERICAN INDEPENDENT PARTY   False   \n",
+       "3  BUBAR, BENJAMIN \"\"BEN\"\"                 PROHIBITION   False   \n",
+       "4                HALL, GUS         COMMUNIST PARTY USE   False   \n",
+       "\n",
+       "   candidatevotes  totalvotes   version  notes party_simplified  \n",
+       "0          659170     1182850  20210113    NaN         DEMOCRAT  \n",
+       "1          504070     1182850  20210113    NaN       REPUBLICAN  \n",
+       "2            9198     1182850  20210113    NaN            OTHER  \n",
+       "3            6669     1182850  20210113    NaN            OTHER  \n",
+       "4            1954     1182850  20210113    NaN            OTHER  "
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# election_cols = [\"Year\", \"State\", \"State_Abbr\", \"County\",\"Office\",\"Candidate\",\"Party\",\"Candidate Votes\",\"Total Votes\" ]\n",
-    "# final_election_data_df = new_election_data_df[election_cols].copy()\n",
-    "# final_election_data_df.head()"
+    "# File to Load (Remember to Change These)\n",
+    "state_election_data = \"data/1976-2020-president.csv\"\n",
+    "\n",
+    "# Read Purchasing File and store into Pandas data frame\n",
+    "state_election_data_df = pd.read_csv(state_election_data, low_memory=False)\n",
+    "state_election_data_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>state</th>\n",
+       "      <th>state_po</th>\n",
+       "      <th>office</th>\n",
+       "      <th>candidate</th>\n",
+       "      <th>candidatevotes</th>\n",
+       "      <th>totalvotes</th>\n",
+       "      <th>party_simplified</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1976</td>\n",
+       "      <td>ALABAMA</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>US PRESIDENT</td>\n",
+       "      <td>CARTER, JIMMY</td>\n",
+       "      <td>659170</td>\n",
+       "      <td>1182850</td>\n",
+       "      <td>DEMOCRAT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1976</td>\n",
+       "      <td>ALABAMA</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>US PRESIDENT</td>\n",
+       "      <td>FORD, GERALD</td>\n",
+       "      <td>504070</td>\n",
+       "      <td>1182850</td>\n",
+       "      <td>REPUBLICAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1976</td>\n",
+       "      <td>ALABAMA</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>US PRESIDENT</td>\n",
+       "      <td>MADDOX, LESTER</td>\n",
+       "      <td>9198</td>\n",
+       "      <td>1182850</td>\n",
+       "      <td>OTHER</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1976</td>\n",
+       "      <td>ALABAMA</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>US PRESIDENT</td>\n",
+       "      <td>BUBAR, BENJAMIN \"\"BEN\"\"</td>\n",
+       "      <td>6669</td>\n",
+       "      <td>1182850</td>\n",
+       "      <td>OTHER</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1976</td>\n",
+       "      <td>ALABAMA</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>US PRESIDENT</td>\n",
+       "      <td>HALL, GUS</td>\n",
+       "      <td>1954</td>\n",
+       "      <td>1182850</td>\n",
+       "      <td>OTHER</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   year    state state_po        office                candidate  \\\n",
+       "0  1976  ALABAMA       AL  US PRESIDENT            CARTER, JIMMY   \n",
+       "1  1976  ALABAMA       AL  US PRESIDENT             FORD, GERALD   \n",
+       "2  1976  ALABAMA       AL  US PRESIDENT           MADDOX, LESTER   \n",
+       "3  1976  ALABAMA       AL  US PRESIDENT  BUBAR, BENJAMIN \"\"BEN\"\"   \n",
+       "4  1976  ALABAMA       AL  US PRESIDENT                HALL, GUS   \n",
+       "\n",
+       "   candidatevotes  totalvotes party_simplified  \n",
+       "0          659170     1182850         DEMOCRAT  \n",
+       "1          504070     1182850       REPUBLICAN  \n",
+       "2            9198     1182850            OTHER  \n",
+       "3            6669     1182850            OTHER  \n",
+       "4            1954     1182850            OTHER  "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "state_election_data_df = state_election_data_df.drop(columns=[\"state_fips\",\"state_cen\",\"state_ic\", \"writein\", \"party_detailed\", \"version\", \"notes\"])\n",
+    "state_election_data_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>State</th>\n",
+       "      <th>State_Abbr</th>\n",
+       "      <th>Office</th>\n",
+       "      <th>Candidate</th>\n",
+       "      <th>Candidate_Votes</th>\n",
+       "      <th>Total_Votes_by_State</th>\n",
+       "      <th>Party</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1976</td>\n",
+       "      <td>ALABAMA</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>US PRESIDENT</td>\n",
+       "      <td>CARTER, JIMMY</td>\n",
+       "      <td>659170</td>\n",
+       "      <td>1182850</td>\n",
+       "      <td>DEMOCRAT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1976</td>\n",
+       "      <td>ALABAMA</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>US PRESIDENT</td>\n",
+       "      <td>FORD, GERALD</td>\n",
+       "      <td>504070</td>\n",
+       "      <td>1182850</td>\n",
+       "      <td>REPUBLICAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1976</td>\n",
+       "      <td>ALABAMA</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>US PRESIDENT</td>\n",
+       "      <td>MADDOX, LESTER</td>\n",
+       "      <td>9198</td>\n",
+       "      <td>1182850</td>\n",
+       "      <td>OTHER</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1976</td>\n",
+       "      <td>ALABAMA</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>US PRESIDENT</td>\n",
+       "      <td>BUBAR, BENJAMIN \"\"BEN\"\"</td>\n",
+       "      <td>6669</td>\n",
+       "      <td>1182850</td>\n",
+       "      <td>OTHER</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1976</td>\n",
+       "      <td>ALABAMA</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>US PRESIDENT</td>\n",
+       "      <td>HALL, GUS</td>\n",
+       "      <td>1954</td>\n",
+       "      <td>1182850</td>\n",
+       "      <td>OTHER</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Year    State State_Abbr        Office                Candidate  \\\n",
+       "0  1976  ALABAMA         AL  US PRESIDENT            CARTER, JIMMY   \n",
+       "1  1976  ALABAMA         AL  US PRESIDENT             FORD, GERALD   \n",
+       "2  1976  ALABAMA         AL  US PRESIDENT           MADDOX, LESTER   \n",
+       "3  1976  ALABAMA         AL  US PRESIDENT  BUBAR, BENJAMIN \"\"BEN\"\"   \n",
+       "4  1976  ALABAMA         AL  US PRESIDENT                HALL, GUS   \n",
+       "\n",
+       "   Candidate_Votes  Total_Votes_by_State       Party  \n",
+       "0           659170               1182850    DEMOCRAT  \n",
+       "1           504070               1182850  REPUBLICAN  \n",
+       "2             9198               1182850       OTHER  \n",
+       "3             6669               1182850       OTHER  \n",
+       "4             1954               1182850       OTHER  "
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Rename Column Headers & Clean up \n",
+    "state_election_data_df = state_election_data_df.rename(columns={\"year\":\"Year\",\n",
+    "                                                           \"state\": \"State\" ,\n",
+    "                                                            \"state_po\": \"State_Abbr\",\n",
+    "                                                            \"office\":\"Office\",\n",
+    "                                                            \"candidate\": \"Candidate\",\n",
+    "                                                            \"candidatevotes\": \"Candidate_Votes\",\n",
+    "                                                            \"totalvotes\": \"Total_Votes_by_State\",\n",
+    "                                                            \"party_simplified\": \"Party\"})\n",
+    "\n",
+    "\n",
+    "state_election_data_df[\"Candidate\"].fillna(\"Other\", inplace = True)\n",
+    "state_election_data_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['DEMOCRAT', 'REPUBLICAN', 'OTHER', 'LIBERTARIAN'], dtype=object)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "state_election_data_df.Party.unique()"
    ]
   },
   {
@@ -598,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,16 +1047,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "['election_data', 'state_election_data']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,6 +1072,15 @@
    "outputs": [],
    "source": [
     "election_data_df.to_sql(name='election_data', con = engine, if_exists='append', index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "state_election_data_df.to_sql(name='state_election_data', con = engine, if_exists='append', index=True)"
    ]
   },
   {
