updated css, logic and index

--- a/Election.ipynb
+++ b/Election.ipynb
@@ -169,6 +169,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# STOP DO NOT run the following lines UNTIL AFTER pgAdmin  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "election_data_df.to_sql(name='election_data', con = engine, if_exists='append', index=True)"
    ]
   },
